--- a/.github/workflows/update-readme.yml
+++ b/.github/workflows/update-readme.yml
@@ -8,6 +8,9 @@ on:
   pull_request:
     branches: [ "main" ]
 
+permissions:
+  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -34,7 +37,7 @@ jobs:
         git config --global user.name 'khkcejkms1'
         git config --global user.email 'khkcejkms1@naver.com'
         git add -A
-        git commit -am "auto update README.md"
+        git commit -am "auto update README.md" || echo "No changes to commit"
     - name: Push changes
       run: |
         git push
